implemented buyer workflow
