# src/entity/store.rs
@@ -1,18 +1,0 @@
-use chrono::{DateTime, Utc};
-use sea_orm::entity::prelude::*;
-use uuid::Uuid;
-
-#[derive(Clone, Debug, PartialEq, DeriveEntityModel)]
-#[sea_orm(table_name = "stores")]
-pub struct Model {
-    #[sea_orm(primary_key)]
-    pub id: Uuid,
-    pub name: String,
-    pub description: Option<String>,
-    pub created_at: DateTime<Utc>,
-}
-
-#[derive(Copy, Clone, Debug, EnumIter, DeriveRelation)]
-pub enum Relation {}
-
-impl ActiveModelBehavior for ActiveModel {}
